k8s-base/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic
  name: spring-petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: nginx
        image: customimage
