k8s-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: spring-petclinic
spec:
  ports:
  - port: 80
  selector:
    app: petclinic
  type: ClusterIP
